force-app/main/default/objects/CC_FAQ__c/CC_FAQ__c.object-meta.xml
<CustomObject>
    <label>FAQ</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Código</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>