force-app/main/default/objects/CC_FAQ__c/fields/CC_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Activo__c</fullName>
    <formula>IF( ( NOT(ISBLANK(CC_Fecha_Vigencia_Fin__c)) &amp;&amp; NOW() &gt;= CC_Fecha_Vigencia_Inicio__c &amp;&amp; NOW() &lt; CC_Fecha_Vigencia_Fin__c ) || ( ISBLANK(CC_Fecha_Vigencia_Fin__c) &amp;&amp; NOW() &gt;= CC_Fecha_Vigencia_Inicio__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>