force-app/main/default/objects/CC_FAQ__c/fields/CC_Aplicacion_Siebel__c.field-meta.xml
<CustomField>
    <fullName>CC_Aplicacion_Siebel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aplicación Siebel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>