force-app/main/default/objects/CC_FAQ__c/fields/CC_AreaMensaje__c.field-meta.xml
<CustomField>
    <fullName>CC_AreaMensaje__c</fullName>
    <description>Área del mensaje (Cliente / Empleado)</description>
    <inlineHelpText>Área del mensaje (Cliente / Empleado)</inlineHelpText>
    <label>Área mensaje</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>