force-app/main/default/objects/CC_FAQ__c/fields/CC_Categoria__c.field-meta.xml
<CustomField>
    <fullName>CC_Categoria__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Espacio__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LineaAbiertaLOE</fullName>
                <label>Linea Abierta</label>
            </value>
            <value>
                <fullName>APPCaixaBankNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>