force-app/main/default/objects/CC_FAQ__c/fields/CC_Codigo_Cognitive__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Cognitive__c</fullName>
    <description>Código interno de cognitive para los mensajes automáticos de los botones.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Cognitive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>