force-app/main/default/objects/CC_FAQ__c/fields/CC_Descripcion_ca__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion_ca__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción Catalán</label>
    <length>200</length>
    <type>Text</type>
</CustomField>