force-app/main/default/objects/CC_FAQ__c/fields/CC_DetalleError__c.field-meta.xml
<CustomField>
    <fullName>CC_DetalleError__c</fullName>
    <description>Detalle del error en la carga de FAQs</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detalle del error en la carga de FAQs</inlineHelpText>
    <label>Detalle error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>