force-app/main/default/objects/CC_FAQ__c/fields/CC_Espacio__c.field-meta.xml
<CustomField>
    <fullName>CC_Espacio__c</fullName>
    <label>Espacio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>liniaObertaWSLOE</fullName>
                <label>Línea Abierta de LOE</label>
            </value>
            <value>
                <fullName>NeoApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>