force-app/main/default/objects/CC_FAQ__c/fields/CC_FAQ_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_FAQ_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FAQ Id externo</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>