force-app/main/default/objects/CC_FAQ__c/fields/CC_FAQ_Ident__c.field-meta.xml
<CustomField>
    <fullName>CC_FAQ_Ident__c</fullName>
    <description>Identificador de FAQ en Cognitivo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identificador de FAQ en Cognitivo</inlineHelpText>
    <label>FAQ Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>