force-app/main/default/objects/CC_FAQ__c/fields/CC_Fecha_Vigencia_Fin__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Vigencia_Fin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin vigencia</label>
    <type>DateTime</type>
</CustomField>