force-app/main/default/objects/CC_FAQ__c/fields/CC_Fecha_Vigencia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Vigencia_Inicio__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Inicio vigencia</label>
    <type>DateTime</type>
</CustomField>