force-app/main/default/objects/CC_FAQ__c/fields/CC_GlobalId__c.field-meta.xml
<CustomField>
    <fullName>CC_GlobalId__c</fullName>
    <description>Identificador global de Cognitivo para la FAQ</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador global de Cognitivo para la FAQ</inlineHelpText>
    <label>Id Global</label>
    <length>10</length>
    <type>Text</type>
</CustomField>