force-app/main/default/objects/CC_FAQ__c/fields/CC_Id_App__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_App__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id App</label>
    <length>50</length>
    <type>Text</type>
</CustomField>