force-app/main/default/objects/CC_FAQ__c/fields/CC_IdiomaESDefault__c.field-meta.xml
<CustomField>
    <fullName>CC_IdiomaESDefault__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Idioma ES (Default)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>