force-app/main/default/objects/CC_FAQ__c/fields/CC_IdiomaMsj__c.field-meta.xml
<CustomField>
    <fullName>CC_IdiomaMsj__c</fullName>
    <description>Idioma del mensaje</description>
    <inlineHelpText>Idioma del mensaje</inlineHelpText>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Codigo_Idioma</valueSetName>
    </valueSet>
</CustomField>