force-app/main/default/objects/CC_FAQ__c/fields/CC_ListaIDsGlobales__c.field-meta.xml
<CustomField>
    <fullName>CC_ListaIDsGlobales__c</fullName>
    <description>Listado de IDs globales asociados (para espacios)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Listado de IDs globales asociados (para espacios)</inlineHelpText>
    <label>Lista IDs globales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>