force-app/main/default/objects/CC_FAQ__c/fields/CC_Lookup_App__c.field-meta.xml
<CustomField>
    <fullName>CC_Lookup_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup App</label>
    <referenceTo>CC_FAQ__c</referenceTo>
    <relationshipLabel>FAQs (Lookup App)</relationshipLabel>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>