force-app/main/default/objects/CC_FAQ__c/fields/CC_Lookup_Espacio__c.field-meta.xml
<CustomField>
    <fullName>CC_Lookup_Espacio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Espacio</label>
    <referenceTo>CC_FAQ__c</referenceTo>
    <relationshipLabel>FAQs (Lookup Espacio)</relationshipLabel>
    <relationshipName>FAQs1</relationshipName>
    <type>Lookup</type>
</CustomField>