force-app/main/default/objects/CC_FAQ__c/fields/CC_Lookup_FAQ__c.field-meta.xml
<CustomField>
    <fullName>CC_Lookup_FAQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FAQ padre del texto personalizado por global id.</description>
    <inlineHelpText>FAQ padre del texto personalizado por global id.</inlineHelpText>
    <label>FAQ Padre</label>
    <referenceTo>CC_FAQ__c</referenceTo>
    <relationshipLabel>FAQs Custom</relationshipLabel>
    <relationshipName>FAQs_custom</relationshipName>
    <type>Lookup</type>
</CustomField>