force-app/main/default/objects/CC_FAQ__c/fields/CC_Mensaje_Agente_es__c.field-meta.xml
<CustomField>
    <fullName>CC_Mensaje_Agente_es__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensaje Agente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>