force-app/main/default/objects/CC_FAQ__c/fields/CC_Nombre__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>