force-app/main/default/objects/CC_FAQ__c/fields/CC_Obsoleto__c.field-meta.xml
<CustomField>
    <fullName>CC_Obsoleto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si el espacio / categoría está obsoleto</description>
    <inlineHelpText>Indicador si el espacio / categoría está obsoleto</inlineHelpText>
    <label>Obsoleto (Espacio / Categoría)</label>
    <type>Checkbox</type>
</CustomField>