force-app/main/default/objects/CC_FAQ__c/fields/CC_Origen__c.field-meta.xml
<CustomField>
    <fullName>CC_Origen__c</fullName>
    <label>Origen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Chat GINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>