force-app/main/default/objects/CC_FAQ__c/fields/CC_Pregunta_ESP__c.field-meta.xml
<CustomField>
    <fullName>CC_Pregunta_ESP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pregunta (castellano)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>