force-app/main/default/objects/CC_FAQ__c/fields/CC_Procedencia_Mensaje_Automatico__c.field-meta.xml
<CustomField>
    <fullName>CC_Procedencia_Mensaje_Automatico__c</fullName>
    <label>Procedencia Mensaje Automático</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bienvenida</fullName>
            </value>
            <value>
                <fullName>Buscar FAQ</fullName>
            </value>
            <value>
                <fullName>Buscar FAQ ya ofrecida</fullName>
            </value>
            <value>
                <fullName>Finalizar</fullName>
            </value>
            <value>
                <fullName>Forzar Fin</fullName>
            </value>
            <value>
                <fullName>No Soportada</fullName>
            </value>
            <value>
                <fullName>Cambio de idioma</fullName>
            </value>
            <value>
                <fullName>Bienvenida confidencial</fullName>
            </value>
            <value>
                <fullName>Franja Dia</fullName>
            </value>
            <value>
                <fullName>Reformular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>