force-app/main/default/objects/CC_FAQ__c/fields/CC_Respuesta_Mensaje_Automatico_ca__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_Mensaje_Automatico_ca__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OBSOLETO Resp. Mensaje Automático (ca)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>