force-app/main/default/objects/CC_FAQ__c/fields/CC_Respuesta_Mensaje_Automatico_es__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_Mensaje_Automatico_es__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Respuesta Mensaje Automático</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>