force-app/main/default/objects/CC_FAQ__c/fields/CC_TelefonoCA__c.field-meta.xml
<CustomField>
    <fullName>CC_TelefonoCA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono (CA)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>