force-app/main/default/objects/CC_FAQ__c/fields/CC_TextoMostrar__c.field-meta.xml
<CustomField>
    <fullName>CC_TextoMostrar__c</fullName>
    <description>Texto para mostrar a agente de la FAQ</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto para mostrar a agente de la FAQ</inlineHelpText>
    <label>Texto a mostrar</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>