force-app/main/default/objects/CC_FAQ__c/fields/CC_Topic__c.field-meta.xml
<CustomField>
    <fullName>CC_Topic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>