force-app/main/default/objects/CC_FAQ__c/fields/CC_UltFaqSiebel__c.field-meta.xml
<CustomField>
    <fullName>CC_UltFaqSiebel__c</fullName>
    <description>Identificador Siebel de la última FAQ enviada</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identificador Siebel de la última FAQ enviada</inlineHelpText>
    <label>Última FAQ enviada (SBL)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>