force-app/main/default/objects/CC_FAQ__c/fields/CC_URL__c.field-meta.xml
<CustomField>
    <fullName>CC_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <type>Url</type>
</CustomField>