force-app/main/default/objects/CC_FAQ__c/fields/CC_Version__c.field-meta.xml
<CustomField>
    <fullName>CC_Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Versión activa</description>
    <inlineHelpText>Versión activa</inlineHelpText>
    <label>Versión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>