force-app/main/default/objects/CC_FAQ__c/fields/CC_VersionActualizando__c.field-meta.xml
<CustomField>
    <fullName>CC_VersionActualizando__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Versión en progreso de actualización</description>
    <inlineHelpText>Versión en progreso de actualización</inlineHelpText>
    <label>Versión en actualización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>