force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_Aplicaciones.recordType-meta.xml
<RecordType>
    <fullName>CC_Aplicaciones</fullName>
    <active>true</active>
    <label>Aplicaciones</label>
</RecordType>