force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_Categoria.recordType-meta.xml
<RecordType>
    <fullName>CC_Categoria</fullName>
    <active>true</active>
    <label>Categoría</label>
</RecordType>