force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_Espacios.recordType-meta.xml
<RecordType>
    <fullName>CC_Espacios</fullName>
    <active>true</active>
    <label>Espacios</label>
</RecordType>