force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_EspaciosActualizar.recordType-meta.xml
<RecordType>
    <fullName>CC_EspaciosActualizar</fullName>
    <active>true</active>
    <description>Cola de espacios que están en progreso de actualización</description>
    <label>Espacios pendiente actualizar</label>
</RecordType>