force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_FAQ.recordType-meta.xml
<RecordType>
    <fullName>CC_FAQ</fullName>
    <active>true</active>
    <label>FAQ</label>
</RecordType>