force-app/main/default/objects/CC_FAQ__c/recordTypes/CC_FAQ_Custom.recordType-meta.xml
<RecordType>
    <fullName>CC_FAQ_Custom</fullName>
    <active>true</active>
    <description>Detalle de la FAQ por identificador global de Cognitivo</description>
    <label>FAQ Custom</label>
</RecordType>