force-app/main/default/objects/CC_FAQ__c/recordTypes/Mensaje_Automatico_Chat.recordType-meta.xml
<RecordType>
    <fullName>Mensaje_Automatico_Chat</fullName>
    <active>true</active>
    <label>Mensaje Automático Chat</label>
</RecordType>