force-app/main/default/objects/CC_FAQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Nombre__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Espacios</value>
    </filters>
    <label>Todos</label>
</ListView>