force-app/main/default/objects/CC_FAQ__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Aplicaciones,CC_FAQ__c.CC_Categoria,CC_FAQ__c.CC_Espacios,CC_FAQ__c.CC_FAQ</value>
    </filters>
    <label>All</label>
</ListView>