force-app/main/default/objects/CC_FAQ__c/listViews/Aplicaciones.listView-meta.xml
<ListView>
    <fullName>Aplicaciones</fullName>
    <columns>NAME</columns>
    <columns>CC_Origen__c</columns>
    <columns>CC_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Aplicaciones</value>
    </filters>
    <label>Aplicaciones</label>
</ListView>