force-app/main/default/objects/CC_FAQ__c/listViews/Categorias.listView-meta.xml
<ListView>
    <fullName>Categorias</fullName>
    <columns>NAME</columns>
    <columns>CC_Lookup_Espacio__c</columns>
    <columns>CC_Lookup_App__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_Fecha_Vigencia_Fin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CC_Obsoleto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Categoria</value>
    </filters>
    <label>Categorias</label>
</ListView>