force-app/main/default/objects/CC_FAQ__c/listViews/CC_Aplicaciones.listView-meta.xml
<ListView>
    <fullName>CC_Aplicaciones</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Aplicaciones</value>
    </filters>
    <label>Todas las aplicaciones</label>
</ListView>