force-app/main/default/objects/CC_FAQ__c/listViews/CC_Mensajes_Auto_Ingles.listView-meta.xml
<ListView>
    <fullName>CC_Mensajes_Auto_Ingles</fullName>
    <columns>CC_AreaMensaje__c</columns>
    <columns>NAME</columns>
    <columns>CC_Procedencia_Mensaje_Automatico__c</columns>
    <columns>CC_Codigo_Cognitive__c</columns>
    <columns>CC_Mensaje_solo_de_agente__c</columns>
    <columns>CC_Origen__c</columns>
    <columns>CC_IdiomaMsj__c</columns>
    <columns>CC_Mensaje_Agente_es__c</columns>
    <columns>CC_Respuesta_Mensaje_Automatico_es__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.Mensaje_Automatico_Chat</value>
    </filters>
    <filters>
        <field>CC_IdiomaMsj__c</field>
        <operation>equals</operation>
        <value>en</value>
    </filters>
    <label>Mensajes Auto - Inglés</label>
</ListView>