force-app/main/default/objects/CC_FAQ__c/listViews/CC_Todas_Las_Categorias.listView-meta.xml
<ListView>
    <fullName>CC_Todas_Las_Categorias</fullName>
    <columns>NAME</columns>
    <columns>CC_Lookup_Espacio__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Categoria</value>
    </filters>
    <label>Todas las categorías</label>
</ListView>