force-app/main/default/objects/CC_FAQ__c/listViews/Cola_Actualizacion.listView-meta.xml
<ListView>
    <fullName>Cola_Actualizacion</fullName>
    <columns>NAME</columns>
    <columns>CC_ErrorCola__c</columns>
    <columns>CC_DetalleError__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_EspaciosActualizar</value>
    </filters>
    <label>Cola_Actualizacion</label>
</ListView>