force-app/main/default/objects/CC_FAQ__c/listViews/Espacios.listView-meta.xml
<ListView>
    <fullName>Espacios</fullName>
    <columns>NAME</columns>
    <columns>CC_Lookup_App__c</columns>
    <columns>CC_Obsoleto__c</columns>
    <columns>CC_Activo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.CC_Espacios</value>
    </filters>
    <label>Espacios</label>
</ListView>