force-app/main/default/objects/CC_FAQ__c/listViews/Todos_los_mensajes_autom_ticos.listView-meta.xml
<ListView>
    <fullName>Todos_los_mensajes_autom_ticos</fullName>
    <columns>NAME</columns>
    <columns>CC_Procedencia_Mensaje_Automatico__c</columns>
    <columns>CC_Codigo_Cognitive__c</columns>
    <columns>CC_Origen__c</columns>
    <columns>CC_IdiomaMsj__c</columns>
    <columns>CC_Mensaje_Agente_es__c</columns>
    <columns>CC_Respuesta_Mensaje_Automatico_es__c</columns>
    <columns>CC_Activo__c</columns>
    <columns>CC_AreaMensaje__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_FAQ__c.Mensaje_Automatico_Chat</value>
    </filters>
    <label>Todos los mensajes automáticos</label>
</ListView>